# fast-websocket-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  format.sh  generate_single_header.sh
.github/workflows/: cmake-multi-platform.yml
benchmark/: echo_client.cpp  echo_server.cpp  fastws_benchmark.cpp  websocketpp_benchmark.cpp
benchmark/echo_test/: benchmark.hpp  fastws_benchmark.cpp  start_echo_server.sh  websocketpp_benchmark.cpp
benchmark/latency/: benchmark.hpp  fastws_latency.cpp  many_message_rtt.py  server.py  websocketpp_benchmark.cpp
examples/: coinbase.cpp  example.cpp  ping.cpp  test.cpp
include/fastws/: base64.hpp  fastws.hpp  handshake.hpp  socket_wrapper.hpp
single_header/: fastws.hpp
tests/: fuzzingserver.json  test.cpp
